--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"react-dom": "^19.1.0",
 		"react-hook-form": "^7.61.1",
 		"react-router-dom": "^7.7.1",
-		"styled-components": "^6.1.19"
+		"styled-components": "^6.1.19",
+		"zustand": "^5.0.6"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.30.1",
